--- a/src/OrchardCore.Themes/TheAdmin/Assets/scss/TheAdmin.scss
+++ b/src/OrchardCore.Themes/TheAdmin/Assets/scss/TheAdmin.scss
@@ -186,7 +186,7 @@ body:not(.left-sidebar-compact) {
 
         .chevron {
             position: absolute;
-            top: 33%;
+            top: 38%;
             left: 100%;
             margin-left: -25px;
         }
@@ -273,6 +273,10 @@ body:not(.left-sidebar-compact) {
                         > span.title {
                             flex-grow: 1;
                             font-size: 14px;
+                            width: calc(100% - 48px - 45px);
+                            overflow: hidden;
+                            white-space: nowrap;
+                            text-overflow: ellipsis;
                         }
                     }
 
@@ -479,7 +483,7 @@ body:not(.left-sidebar-compact) {
 
         .chevron {
             position: absolute;
-            top: 33%;
+            top: 38%;
             left: 100%;
             margin-left: -25px;
         }
@@ -561,6 +565,10 @@ body:not(.left-sidebar-compact) {
                     > span.title {
                         flex-grow: 1;
                         font-size: 14px;
+                        width: calc(100% - 48px);
+                        overflow: hidden;
+                        white-space: nowrap;
+                        text-overflow: ellipsis;
                     }
                 }
 
@@ -664,7 +672,7 @@ body:not(.left-sidebar-compact) {
                     display: flex;
 
                     .title {
-                        padding-left: 20px;
+                        padding: 0 20px;
 
                         &:hover {
                             background-color: $gray-100 !important;
@@ -688,6 +696,10 @@ body:not(.left-sidebar-compact) {
                         flex-grow: 1;
                         font-size: 14px;
                         font-weight: bold;
+                        width: calc(100% - 48px);
+                        overflow: hidden;
+                        white-space: nowrap;
+                        text-overflow: ellipsis;
                     }
 
                     > span.title:after {
